# robot-handbook

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  build.py  build.sh  buildDocs.sh  genindex.html  index.html  linear_layout.ipynb  objects.inv  package.json  pid_anim.ipynb  plate.ipynb  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  search.html  searchindex.js  setup.py  setup.sh  style.md  testy.py  tool.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yml  deploy-website.yaml  docs_pages_workflow.yml  gh-pages-deploy.yaml  gh-pages-deploy.yml  test-build.yaml
animations/: example.py  moving.py
animations/example_layouts/: linear_layout.ipynb
animations/pid_basics/: pid_anim.ipynb  pid_mobjects.py  pid_outline.ipynb  pid_scenes.py  test_physics_sims.ipynb
animations/plate/: plate.ipynb  plate.py
animations/test_imports/: demo_imports.ipynb
common/calc/: tangent.py  util.py
common/design/: plate.py  sketch_line.py
common/view/: sequential_title.py  style.py
design/: design.html
design/plate/: plate.html
extensions/: __init__.py  animation.py  video.py
geometry/: __init__.py  linear_algebra.py  test_linear_algebra.ipynb
math_utils/: __init__.py  linear_algebra.py  mobject_geometry.py
rc_lib/: math_types.py  style.py  type_hints.py  types.py
rc_lib/common_mobjects/: containers.py  layouts.py  plate.py  sketch.py  sketch_constraint.py
source/: conf.py  index.rst
video_extension/: __init__.py  animation.py  local_nodes.py  video.py
website/: conf.py  index.md
(+47 files in other folders)
